--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
 
+    <!-- STATS BLOCK – wieder oben, mit Contract Address -->
+    <div class="stats-container">
+      <div class="stats-grid">
+        <div class="stat-item">
+          <span class="stat-label">Contract Address</span>
+          <span class="stat-value">2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Holders Target</span>
+          <span class="stat-value">10k+</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Volume Target</span>
+          <span class="stat-value">$5M+</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Market Cap Target</span>
+          <span class="stat-value">$42M+</span>
+        </div>
+      </div>
+    </div>
+
     <div class="text-frame teaser-frame">
       <div class="frame-content">
         $HAZARD is forged in darkness — a 100% fair-launched Solana memecoin.<br>
@@ -34,7 +56,7 @@
       </div>
     </div>
 
-    <!-- BUY BUTTON – AKTIV -->
+    <!-- BUY BUTTON – aktiv -->
     <div class="buy-container">
       <a href="https://pump.fun/2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump" target="_blank" class="buy-btn">
         <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
@@ -55,7 +77,7 @@
         <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 11.944 0zm4.962 9.73l-1.42 6.696c-.104.487-.375.607-.775.378l-2.16-1.59-1.04.998c-.115.112-.21.205-.43.205l.155-2.188 4.004-3.835c.174-.157-.038-.244-.27-.087l-4.946 3.116-1.905-.596c-.414-.129-.424-.413.086-.608l7.904-3.043c.348-.13.654.084.65.533z"/></svg>
         <span>Telegram</span>
       </a>
-      <a href="https://www.facebook.com/hazardsolana" target="_blank" class="link-box">
+      <a href="https://www.facebook.com/profile.php?id=DEINE_ID" target="_blank" class="link-box">
         <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
           <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
         </svg>
