--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     
 
-    <div class="text-frame teaser-frame">
+    <<div class="text-frame teaser-frame">
       <div class="frame-content">
         $HAZARD is forged in darkness — a 100% fair-launched Solana memecoin.<br>
         No presale. No team tokens. No insiders. Liquidity burned at launch.<br><br>
@@ -39,6 +39,7 @@
         We promise nothing — except a level playing field and a locked battlefield.<br>
         The skull doesn’t lie. The skull doesn’t forgive.<br>
         But the skull never cheats.<br><br>
+        Fair launch incoming. Be ready.<br>
         HAZARD — 100% community. 0% bullshit.
       </div>
     </div>
