--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="ca-container">
       <div class="ca-box coming-soon">
         <p class="ca-label">2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump</p>
-        <p style="font-size:20px; color:var(--gold); margin:10px 0;">In progress</p>
+        <p style="font-size:20px; color:var(--gold); margin:10px 0;"></p>
         <small>Pump.fun fair launch • Auto-burned LP • Renounced</small>
       </div>
     </div>
