--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <link rel="stylesheet" href="styles.css">
   <style>
     /* Mobile-Fix für CA-Overflow */
-    .stat-value.ca-value {
+    .ca-value {
       word-break: break-all;
       overflow-wrap: break-word;
       max-width: 100%;
       font-size: 14px;
     }
     @media (max-width: 768px) {
-      .stat-value.ca-value {
+      .ca-value {
         font-size: 12px;
         line-height: 1.2;
       }
@@ -35,21 +35,22 @@
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
-<!-- CONTRACT ADDRESS – in Arbeit Version -->
+    <!-- CONTRACT ADDRESS – fixed Version -->
     <div class="ca-container">
       <div class="ca-box coming-soon">
-        <p class="ca-label">2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump</p>
-        <p style="font-size:20px; color:var(--gold); margin:10px 0;"></p>
+        <p class="ca-label">Contract Address</p>
+        <p class="ca-value" style="font-size:20px; color:var(--gold); margin:10px 0;">2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump</p>
         <small>Pump.fun fair launch • Auto-burned LP • Renounced</small>
       </div>
     </div>
-    <<div class="text-frame teaser-frame">
+   
+    <div class="text-frame teaser-frame">
       <div class="frame-content">
-        $HAZARD is forged in darkness a 100% fair-launched Solana memecoin.<br>
+        $HAZARD is forged in darkness — a 100% fair-launched Solana memecoin.<br>
         No presale. No team tokens. No insiders. Liquidity burned at launch.<br><br>
         This is pure crypto chaos: high risk, high reward, zero safety net.<br>
         You enter on your own terms. You exit on your own terms.<br><br>
-        We promise nothing except a level playing field and a locked battlefield.<br>
+        We promise nothing — except a level playing field and a locked battlefield.<br>
         The skull doesn’t lie. The skull doesn’t forgive.<br>
         But the skull never cheats.<br><br>
         Fair launch incoming. Be ready.<br>
