--- a/index.html
+++ b/index.html
@@ -57,7 +57,69 @@
         HAZARD — 100% community. 0% bullshit.
       </div>
     </div>
+<!-- ROADMAP – brutal schön & düster -->
+<div class="roadmap-container">
+  <h2 class="roadmap-title">HAZARD ROADMAP</h2>
+  <p class="roadmap-subtitle">The skull doesn’t follow plans. It burns them.</p>
 
+  <div class="phase-grid">
+    <div class="phase-box">
+      <h3 class="phase-number">Phase 1</h3>
+      <h4 class="phase-name">Launch & Foundation</h4>
+      <ul class="phase-list">
+        <li>Token launch on Pump.fun</li>
+        <li>Community setup (Telegram, X, Website)</li>
+        <li>Branding & basic utilities outline</li>
+        <li>Early marketing push</li>
+        <li>First wave of holders</li>
+        <li>Transparency updates & dev AMA</li>
+      </ul>
+    </div>
+
+    <div class="phase-box">
+      <h3 class="phase-number">Phase 2</h3>
+      <h4 class="phase-name">Growth & Awareness</h4>
+      <ul class="phase-list">
+        <li>Stronger marketing campaigns</li>
+        <li>Shilling network expansion</li>
+        <li>Partnerships with small influencers</li>
+        <li>Community contests & engagement</li>
+        <li>Dexscreener, Birdeye listing</li>
+        <li>Chart stabilization + organic growth</li>
+      </ul>
+    </div>
+
+    <div class="phase-box">
+      <h3 class="phase-number">Phase 3</h3>
+      <h4 class="phase-name">Utility & Ecosystem</h4>
+      <ul class="phase-list">
+        <li>Hazard Litepaper release</li>
+        <li>First utility announcement</li>
+        <li>Tool prototype (dashboard, alerts, mini dApp)</li>
+        <li>Community rewards system</li>
+        <li>More partnerships & collabs</li>
+      </ul>
+    </div>
+
+    <div class="phase-box">
+      <h3 class="phase-number">Phase 4</h3>
+      <h4 class="phase-name">Expansion & Long-Term Vision</h4>
+      <ul class="phase-list">
+        <li>Full utility rollout</li>
+        <li>Big influencer campaigns</li>
+        <li>CEX listing applications (Tier 3–4)</li>
+        <li>Global community growth</li>
+        <li>Staking / NFT / Booster (community vote)</li>
+      </ul>
+    </div>
+  </div>
+
+  <p class="roadmap-footer">
+    This is not a promise.<br>
+    This is a war plan.<br><br>
+    Survive it — or become part of the ashes.
+  </p>
+</div>
     <!-- BUY BUTTON – aktiv -->
     <div class="buy-container">
       <a href="https://pump.fun/2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump" target="_blank" class="buy-btn">
