--- a/index.html
+++ b/index.html
@@ -74,24 +74,31 @@
         HAZARD — 100% community. 0% bullshit.
       </div>
     </div>
-<!-- ROADMAP – brutal schön & düster -->
-<div class="roadmap-container">
-  <h2 class="roadmap-title">HAZARD ROADMAP</h2>
-  <p class="roadmap-subtitle">The skull doesn’t follow plans. It burns them.</p>
+</div> <!-- Ende teaser-frame -->
 
-  <div class="phase-grid">
-    <div class="phase-box">
-      <h3 class="phase-number">Phase 1</h3>
-      <h4 class="phase-name">Launch & Foundation</h4>
-      <ul class="phase-list">
-        <li>Token launch on Pump.fun</li>
-        <li>Community setup (Telegram, X, Website)</li>
-        <li>Branding & basic utilities outline</li>
-        <li>Early marketing push</li>
-        <li>First wave of holders</li>
-        <li>Transparency updates & dev AMA</li>
-      </ul>
+    <!-- ROADMAP HIER EINFÜGEN -->
+    <div class="roadmap-container">
+      <style>
+  .roadmap-container { margin: 60px 20px; text-align: center; }
+  .roadmap-title { font-size: 36px; color: var(--gold); margin-bottom: 10px; }
+  .roadmap-subtitle { color: #aaa; font-size: 18px; margin-bottom: 40px; }
+  .phase-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 40px 0; }
+  .phase-box { background: rgba(0,0,0,0.8); border: 1px solid var(--gold); border-radius: 8px; padding: 20px; }
+  .phase-number { font-size: 42px; color: var(--gold); margin: 0; opacity: 0.3; }
+  .phase-name { font-size: 22px; color: var(--gold); margin: 10px 0; }
+  .phase-list { text-align: left; color: #ccc; line-height: 1.8; font-size: 15px; margin: 15px 0 0; padding-left: 20px; }
+  .phase-list li { margin: 8px 0; }
+  .roadmap-footer { margin-top: 50px; font-size: 18px; color: var(--gold); line-height: 1.6; }
+  @media (max-width: 768px) {
+    .roadmap-title { font-size: 28px; }
+    .phase-number { font-size: 32px; }
+    .phase-name { font-size: 20px; }
+  }
+</style>
     </div>
+
+    <!-- BUY BUTTON -->
+    <div class="buy-container">
 
     <div class="phase-box">
       <h3 class="phase-number">Phase 2</h3>
