--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
     .phase-name { font-size: 20px; }
   }
 </style>
+  <style>
+  .roadmap-container { margin: 60px 20px; text-align: center; }
+  .roadmap-title { font-size: 36px; color: var(--gold); margin-bottom: 10px; }
+  .roadmap-subtitle { color: #aaa; font-size: 18px; margin-bottom: 40px; }
+  .phase-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 40px 0; }
+  .phase-box { background: rgba(0,0,0,0.8); border: 1px solid var(--gold); border-radius: 8px; padding: 20px; }
+  .phase-number { font-size: 42px; color: var(--gold); margin: 0; opacity: 0.3; }
+  .phase-name { font-size: 22px; color: var(--gold); margin: 10px 0; }
+  .phase-list { text-align: left; color: #ccc; line-height: 1.8; font-size: 15px; margin: 15px 0 0; padding-left: 20px; }
+  .phase-list li { margin: 8px 0; }
+  .roadmap-footer { margin-top: 50px; font-size: 18px; color: var(--gold); line-height: 1.6; }
+  @media (max-width: 768px) {
+    .roadmap-title { font-size: 28px; }
+    .phase-number { font-size: 32px; }
+    .phase-name { font-size: 20px; }
+  }
+</style>
 </head>
 <body>
   <div class="hero">
@@ -94,24 +111,7 @@ function copyCA() {
 </div> <!-- Ende teaser-frame -->
 
     <!-- ROADMAP HIER EINFÜGEN -->
-    <div class="roadmap-container">
-      <style>
-  .roadmap-container { margin: 60px 20px; text-align: center; }
-  .roadmap-title { font-size: 36px; color: var(--gold); margin-bottom: 10px; }
-  .roadmap-subtitle { color: #aaa; font-size: 18px; margin-bottom: 40px; }
-  .phase-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 40px 0; }
-  .phase-box { background: rgba(0,0,0,0.8); border: 1px solid var(--gold); border-radius: 8px; padding: 20px; }
-  .phase-number { font-size: 42px; color: var(--gold); margin: 0; opacity: 0.3; }
-  .phase-name { font-size: 22px; color: var(--gold); margin: 10px 0; }
-  .phase-list { text-align: left; color: #ccc; line-height: 1.8; font-size: 15px; margin: 15px 0 0; padding-left: 20px; }
-  .phase-list li { margin: 8px 0; }
-  .roadmap-footer { margin-top: 50px; font-size: 18px; color: var(--gold); line-height: 1.6; }
-  @media (max-width: 768px) {
-    .roadmap-title { font-size: 28px; }
-    .phase-number { font-size: 32px; }
-    .phase-name { font-size: 20px; }
-  }
-</style>
+    <div class="roadmap-container"
     </div>
 
     <!-- BUY BUTTON -->
