--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function copyCA() {
 
       <div class="phase-grid">
         <div class="phase-box">
-          <h3 class="phase-number">01</h3>
+          <h3 class="phase-number">Phase 01</h3>
           <h4 class="phase-name">Launch & Foundation</h4>
           <ul class="phase-list">
             <li>Token launch on Pump.fun</li>
@@ -117,7 +117,7 @@ function copyCA() {
         </div>
 
         <div class="phase-box">
-          <h3 class="phase-number">02</h3>
+          <h3 class="phase-number">Phase 02</h3>
           <h4 class="phase-name">Growth & Awareness</h4>
           <ul class="phase-list">
             <li>Stronger marketing campaigns</li>
@@ -130,7 +130,7 @@ function copyCA() {
         </div>
 
         <div class="phase-box">
-          <h3 class="phase-number">03</h3>
+          <h3 class="phase-number">Phase 03</h3>
           <h4 class="phase-name">Utility & Ecosystem</h4>
           <ul class="phase-list">
             <li>Hazard Litepaper release</li>
@@ -142,7 +142,7 @@ function copyCA() {
         </div>
 
         <div class="phase-box">
-          <h3 class="phase-number">04</h3>
+          <h3 class="phase-number">Phase 04</h3>
           <h4 class="phase-name">Expansion & Long-Term Vision</h4>
           <ul class="phase-list">
             <li>Full utility rollout</li>
