--- a/index.html
+++ b/index.html
@@ -154,27 +154,22 @@ function copyCA() {
         </div>
       </div>
 
-      <p class="roadmap-footer">
-        This is not a promise.<br>
-        This is a war plan.<br><br>
-        Survive it — or become part of the ashes.
-      </p>
-    </div>
+      <!-- ROADMAP FOOTER – weniger Abstand -->
+    <p class="roadmap-footer" style="margin-top: 30px; margin-bottom: 40px;">
+      Survive it — or become part of the ashes.
+    </p>
+  </div> <!-- Ende roadmap-container -->
 
-    <!-- BUY BUTTON -->
-    <div class="buy-container">
-
-    
-    <!-- BUY BUTTON – aktiv -->
-    <div class="buy-container">
-      <a href="https://pump.fun/2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump" target="_blank" class="buy-btn">
-        <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
-          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
-        </svg>
-        BUY ON PUMP.FUN
-      </a>
-      <p class="buy-info">First come, first served</p>
-    </div>
+  <!-- BUY BUTTON – jetzt viel näher dran -->
+  <div class="buy-container" style="margin-top: 20px;">
+    <a href="https://pump.fun/2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump" target="_blank" class="buy-btn">
+      <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
+        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+      </svg>
+      BUY ON PUMP.FUN
+    </a>
+    <p class="buy-info">First come, first served</p>
+  </div>
 
     <!-- SOCIALS -->
     <div class="links-container">
