--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@ function copyCA() {
 
       <!-- ROADMAP FOOTER – weniger Abstand -->
     <p class="roadmap-footer" style="margin-top: 30px; margin-bottom: 40px;">
-      Survive it — or become part of the ashes.
+      This is not a promise.<br>
+        This is a war plan.<br><br>
+        Survive it — or become part of the ashes.
     </p>
   </div> <!-- Ende roadmap-container -->
 
