--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ function copyCA() {
     <p class="roadmap-footer" style="margin-top: 30px; margin-bottom: 40px;">
       This is not a promise.<br>
         This is a war plan.<br><br>
-        Survive it — or become part of the ashes.
+        Survive it - or become part of the ashes.
     </p>
   </div> <!-- Ende roadmap-container -->
 
