--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ function copyCA() {
       </svg>
       BUY ON PUMP.FUN
     </a>
-    <p class="buy-info">First come, first served</p>
+    <p class="buy-info">Only the swift survive the launch</p>
   </div>
 
     <!-- SOCIALS -->
