--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ function copyCA() {
         The skull doesn’t lie. The skull doesn’t forgive.<br>
         But the skull never cheats.<br><br>
         Fair launch incoming. Be ready.<br>
-        HAZARD — 100% community. 0% bullshit.
+        HAZARD - 100% community. 0% bullshit.
       </div>
     </div>
 <!-- ROADMAP – hier ist sie, brutal schön -->
